--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <a href="#" class="btn-hero">Learn More</a>
     </section>
 
-    <h2 class="section-title" id="films">Features</h2>
+    <h2 class="section-title" id="films">Featuring</h2>
     <section class="films-grid">
         
         <div class="film-card">
