--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <body>
 
     <header id="main-header">
-        <div class="logo">MEANSPIRITED PRODUCTIONS</div>
+        <div class="logo">MEAN SPIRITED PRODUCTIONS</div>
         <div class="nav-right">
             <div class="close-icon">&times;</div>
             <nav class="nav-links">
@@ -375,7 +375,7 @@
         <a href="#" class="btn-hero">Learn More</a>
     </section>
 
-    <h2 class="section-title" id="films">Featuring</h2>
+    <h2 class="section-title" id="films"></h2>
     <section class="films-grid">
         
         <div class="film-card">
